--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </div>
 </nav>
     <div class="photo-and-name" id="about">
-        <img src="../bagas.jpg" class="photo" alt="Profile Picture">
+        <img src="bagas.jpg" class="photo" alt="Profile Picture">
         <div class="contact-info-box">
             <h1 class="name">Bagas kusuma</h1>
             <br>
